// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"data\\": {
    \\"google_client_config\\": {
      \\"root_wingapp_config_C33BD6F8\\": {}
    }
  },
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_wingapp_mybucket_4494AD48\\": {
        \\"location\\": \\"\${data.google_client_config.root_wingapp_config_C33BD6F8.region}\\",
        \\"name\\": \\"c8c86ad58bb4f77a82400197b6429c7a8cf445b12c\\",
        \\"public_access_prevention\\": \\"enforced\\"
      }
    },
    \\"google_storage_bucket_iam_member\\": {
      \\"root_wingapp_mybucket_PublicAccessIamMember_C49912B5\\": {
        \\"bucket\\": \\"\${google_storage_bucket.root_wingapp_mybucket_4494AD48.name}\\",
        \\"member\\": \\"allUsers\\",
        \\"role\\": \\"roles/storage.objectViewer\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/wing-app/WingLogger",
              },
              "config": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.dataGoogleClientConfig.DataGoogleClientConfig",
                  "version": "5.0.2",
                },
                "id": "config",
                "path": "root/wing-app/config",
              },
              "google": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.2",
                },
                "id": "google",
                "path": "root/wing-app/google",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.2",
                    },
                    "id": "Default",
                    "path": "root/wing-app/my_bucket/Default",
                  },
                  "PublicAccessIamMember": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucketIamMember.StorageBucketIamMember",
                      "version": "5.0.2",
                    },
                    "id": "PublicAccessIamMember",
                    "path": "root/wing-app/my_bucket/PublicAccessIamMember",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "root/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"data\\": {
    \\"google_client_config\\": {
      \\"root_wingapp_config_C33BD6F8\\": {}
    }
  },
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_wingapp_mybucket_4494AD48\\": {
        \\"location\\": \\"\${data.google_client_config.root_wingapp_config_C33BD6F8.region}\\",
        \\"name\\": \\"c8c86ad58bb4f77a82400197b6429c7a8cf445b12c\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/wing-app/WingLogger",
              },
              "config": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.dataGoogleClientConfig.DataGoogleClientConfig",
                  "version": "5.0.2",
                },
                "id": "config",
                "path": "root/wing-app/config",
              },
              "google": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.2",
                },
                "id": "google",
                "path": "root/wing-app/google",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.2",
                    },
                    "id": "Default",
                    "path": "root/wing-app/my_bucket/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "root/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
